<resources>
    <string name="app_name">Second</string>
    <string name="text_android">Hello</string>
    <string name="name_android">Dear Wang Xinyi</string>
    <string name="blessing_android">Happy birthday to you,my daughter.</string>
    <string name="person_android">Your Parents</string>
    <string name="input_tip">input your name please</string>
    <string name="text_tep">Please enter Celsius</string>
    <string name="text_fahrenheit">Convert to a temperature of Fahrenheit</string>
    <string name="text_view">The result is:</string>
    <string name="TeamA">TeamA</string>
    <string name="TeamB">TeamB</string>
    <string name="Pointone">+1 points</string>
    <string name="Pointtwo">+2 points</string>
    <string name="Pointthree">+3 points</string>
    <string name="Reset">Reset</string>
    <string name="zero">0</string>
    <string name="input">input RMB</string>
    <string name="dollar">Dollar</string>
    <string name="euro">Euro</string>
    <string name="won">Won</string>
    <string name="exchange">Exchange rate conversion</string>
    <string name="title_activity_rate">rate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main4">MainActivity</string>
    <string name="config">Config</string>
    <string name="save">Save</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_return">Return</string>
</resources>