<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exchange" />

        <EditText
            android:id="@+id/rmb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:inputType="numberDecimal"
            android:hint="@string/input" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="35sp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="150dp"
            android:layout_marginLeft="150dp"
            android:text="@string/text_android" />

        <Button
            android:id="@+id/dollar"
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/dollar" />

        <Button
            android:id="@+id/euro"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:onClick="click"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/euro" />

        <Button
            android:id="@+id/won"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:onClick="click"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:text="@string/won" />

        <Button
            android:id="@+id/button12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:onClick="openConfig"
            android:text="@string/config" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>